Removed more testing redundancy